search parcels by 'Description' as a default

--- a/OutworldzFiles/Apache/htdocs/Search/SearchParcel.htm
+++ b/OutworldzFiles/Apache/htdocs/Search/SearchParcel.htm
@@ -1,4 +1,4 @@
-<html lang="en-us">
+﻿<html lang="en-us">
 <!-- AGPL 3.0 by Fred Beckhusen -->
 <head>
 <meta charset="utf-8">
@@ -35,10 +35,10 @@ $(document).ready(function(){
 		
 		searchitems : [
 		 {display: 'Grid', name :'Grid', isdefault: false},
-		 {display: 'Description', name :'Description', isdefault: false},
+		 {display: 'Description', name :'Description', isdefault: true},
 		 {display: 'Parcel', name :'Parcelname', isdefault: false},
 		 {display: 'Mature', name :'Mature', isdefault: false},
-		 {display: 'Rank', name :'dwell', isdefault: true}
+		 {display: 'Rank', name :'dwell', isdefault: false}
 		 
 		 
 		],
