--- a/OutworldzFiles/Help/Regions.htm
+++ b/OutworldzFiles/Help/Regions.htm
@@ -33,6 +33,22 @@
 	line-height:115%;
 	font-size:10.0pt;
 	font-family:"Calibri",sans-serif;}
+h1
+	{mso-style-link:"Heading 1 Char";
+	margin-top:5.0pt;
+	margin-right:0in;
+	margin-bottom:0in;
+	margin-left:0in;
+	line-height:115%;
+	background:#5B9BD5;
+	border:none;
+	padding:0in;
+	font-size:11.0pt;
+	font-family:"Calibri",sans-serif;
+	color:white;
+	text-transform:uppercase;
+	letter-spacing:.75pt;
+	font-weight:normal;}
 p.MsoTitle, li.MsoTitle, div.MsoTitle
 	{mso-style-link:"Title Char";
 	margin:0in;
@@ -42,6 +58,13 @@ p.MsoTitle, li.MsoTitle, div.MsoTitle
 	color:#5B9BD5;
 	text-transform:uppercase;
 	letter-spacing:.5pt;}
+span.Heading1Char
+	{mso-style-name:"Heading 1 Char";
+	mso-style-link:"Heading 1";
+	color:white;
+	text-transform:uppercase;
+	letter-spacing:.75pt;
+	background:#5B9BD5;}
 span.TitleChar
 	{mso-style-name:"Title Char";
 	mso-style-link:Title;
@@ -51,12 +74,6 @@ span.TitleChar
 	letter-spacing:.5pt;}
 .MsoChpDefault
 	{font-family:"Calibri",sans-serif;}
-.MsoPapDefault
-	{margin-top:5.0pt;
-	margin-right:0in;
-	margin-bottom:10.0pt;
-	margin-left:0in;
-	line-height:115%;}
  /* Page Definitions */
  @page WordSection1
 	{size:8.5in 11.0in;
@@ -72,8 +89,8 @@ div.WordSection1
 
 <div class=WordSection1>
 
-<p class=MsoTitle align=center style='text-align:center'><a name="OLE_LINK14"><span
-lang=EN>Regions</span></a></p>
+<p class=MsoTitle align=center style='text-align:center'><a name="OLE_LINK27"></a><a
+name="OLE_LINK14"><span lang=EN>Regions</span></a></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
 10.0pt;margin-left:.5in;text-autospace:none'><span lang=EN style='font-family:
@@ -81,14 +98,24 @@ lang=EN>Regions</span></a></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
 10.0pt;margin-left:.5in;text-autospace:none'><b><span lang=EN style='font-family:
+"Verdana",sans-serif'>Region Settings  </span></b><span lang=EN
+style='font-family:"Verdana",sans-serif'>holds various defaults for all
+regions. </span></p>
+
+<p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
+10.0pt;margin-left:.5in;text-autospace:none'><img width=265 height=469
+id="Picture 1" src="Regions_files/image001.png"></p>
+
+<p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
+10.0pt;margin-left:.5in;text-autospace:none'><b><span lang=EN style='font-family:
 "Verdana",sans-serif'>Default region for visitors: </span></b><span lang=EN
-style='font-family:"Verdana",sans-serif'>This is your “Welcome” region.<b>  </b>Hypergrid
+style='font-family:"Verdana",sans-serif'>This is your “Welcome” region.<b>  </b>Hypergrid
 visitors and people who log in for the first time get sent to this region.  The
 region must be online. </span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
-10.0pt;margin-left:.5in;text-autospace:none'><img width=247 height=452
-id="Picture 1" src="Regions_files/image001.png"></p>
+10.0pt;margin-left:.5in;text-autospace:none'><span lang=EN style='font-family:
+"Verdana",sans-serif'><img width=203 height=82 src="Regions_files/image002.png"></span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
 10.0pt;margin-left:.5in;text-autospace:none'><b><span lang=EN style='font-family:
@@ -103,31 +130,54 @@ page will land at this spot on your Welcome region. Their home is set here.  Def
 "Verdana",sans-serif'>will bring up a dialog form for adding a new region.</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
+10.0pt;margin-left:.5in;text-autospace:none'><span lang=EN style='font-family:
+"Verdana",sans-serif'><img width=165 height=31 src="Regions_files/image003.png"></span></p>
+
+<p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
 10.0pt;margin-left:.5in;text-autospace:none'><b><span lang=EN style='font-family:
 "Verdana",sans-serif'>Configure All Regions: </span></b><span lang=EN
 style='font-family:"Verdana",sans-serif'>will open all regions for editing.</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
+10.0pt;margin-left:.5in;text-autospace:none'><span lang=EN style='font-family:
+"Verdana",sans-serif'><img width=160 height=29 src="Regions_files/image004.png"></span></p>
+
+<p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
 10.0pt;margin-left:.5in;text-autospace:none'><b><span lang=EN style='font-family:
 "Verdana",sans-serif'>Clear All Registrations:</span></b><span lang=EN
 style='font-family:"Verdana",sans-serif'> You may get an error when you add a
-region where another region once existed or overlapped.  A crashed region will
-leave behind this registration, and you cannot place another region there. Pressing
-this will deregister all regions so all regions can be moved.  This button deletes
-all regions from the “present and accounted for’, region table in Robust.  </span></p>
+region where another region once existed or overlapped.  This operation will
+remove all registrations of all regions from the database.   All regions,
+including Smart Boot regions re-register when the grid is booted.</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
 10.0pt;margin-left:.5in;text-autospace:none'><span lang=EN style='font-family:
-"Verdana",sans-serif'>This requires that the grid not be running.  See below for
-more details on <u>Region Error.</u></span></p>
+"Verdana",sans-serif'><img width=160 height=29 src="Regions_files/image005.png"></span></p>
+
+<p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
+10.0pt;margin-left:.5in;text-autospace:none'><span lang=EN style='font-family:
+"Verdana",sans-serif'>Why is this useful?  crashed region will leave behind this
+registration, and you cannot place another region in the same spot. Pressing
+this will deregister all regions so all regions can be moved.  This button
+deletes all regions from the “present and accounted for’, region table in
+Robust.  </span></p>
+
+<p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
+10.0pt;margin-left:.5in;text-autospace:none'><span lang=EN style='font-family:
+"Verdana",sans-serif'>This requires that the grid not be running.  See below
+for more details in <b><u>Troubleshooting.</u></b></span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
 10.0pt;margin-left:.5in;text-autospace:none'><b><span lang=EN style='font-family:
 "Verdana",sans-serif'>Normalize Regions:  </span></b><span lang=EN
-style='font-family:"Verdana",sans-serif'>The web maps require that the lower<b>
-</b>left corner be started at 1000,1000.   This will move all regions so that
-the chosen region is at 1000,1000. All regions maintain their relative
+style='font-family:"Verdana",sans-serif'>The Javascript web map requires that
+the lower<b> </b>left corner starts at 1000,1000.   This will move all regions
+so that the chosen region is at 1000,1000. All regions maintain their relative
 positions.</span></p>
+
+<p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
+10.0pt;margin-left:.5in;text-autospace:none'><span lang=EN style='font-family:
+"Verdana",sans-serif'><img width=160 height=29 src="Regions_files/image006.png"></span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
 10.0pt;margin-left:.5in;text-autospace:none'><b><span lang=EN style='font-family:
@@ -135,10 +185,54 @@ positions.</span></p>
 "Verdana",sans-serif'>will bring up a dialog form to edit the selected region.</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
+10.0pt;margin-left:.5in;text-autospace:none'><span lang=EN style='font-family:
+"Verdana",sans-serif'><img width=161 height=31 src="Regions_files/image007.png"></span></p>
+
+<p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
+10.0pt;margin-left:.5in;text-autospace:none'><b><span lang=EN style='font-size:
+11.0pt;line-height:115%'>Announce Visitors</span></b><span lang=EN
+style='font-size:11.0pt;line-height:115%'>: This is a global enable.  Visitors
+that arrive in a region are chatted using Opensimulator’s Concierge module.  The
+region must also have an override for “Announce Visitors” in the Modules
+section of the Region settings.</span></p>
+
+<p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
+10.0pt;margin-left:.5in;text-autospace:none'><b><span lang=EN style='font-size:
+11.0pt;line-height:115%'>Speech Selection box:</span></b><span lang=EN
+style='font-size:11.0pt;line-height:115%'>  This setting uses a Microsoft or a
+3<sup>rd</sup> party Speech Synthesizer to announce when visitors arrive or
+leave.   You can choose Zira or David voices, or add a 3<sup>rd</sup> party
+voice by purchasing and installing a SAPI compatible voice.</span></p>
+
+<p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
 10.0pt;margin-left:.5in;text-autospace:none'><span lang=EN style='font-size:
-11.0pt;line-height:115%'>Announce Visitors: This is a global enable so regions can
-announce arrivals of visitors. The region must also have an override for “Announce
-Visitors” in the Modules section of the Region settings.</span></p>
+11.0pt;line-height:115%'><img width=161 height=36
+src="Regions_files/image008.png"></span></p>
+
+<p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
+10.0pt;margin-left:.5in;text-autospace:none'><span lang=EN style='font-size:
+11.0pt;line-height:115%'>This speech feature will not work on Contabo/ Windows
+Servers without there actually being a sound card.  A vi\rtual sound card from
+one of these source may fix that.</span></p>
+
+<p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
+10.0pt;margin-left:.5in;text-autospace:none'><span lang=EN style='font-size:
+11.0pt;line-height:115%'>https://vb-audio.com/Cable/</span></p>
+
+<p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
+10.0pt;margin-left:.5in;text-autospace:none'><span lang=EN style='font-size:
+11.0pt;line-height:115%'>http://virtualsoundcarddriver.com/</span></p>
+
+<p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
+10.0pt;margin-left:.5in;text-autospace:none'><span lang=EN style='font-size:
+11.0pt;line-height:115%'>&nbsp;</span></p>
+
+<div style='border:solid #5B9BD5 3.0pt;padding:0in 0in 0in 0in;background:#5B9BD5;
+margin-left:.5in;margin-right:0in'>
+
+<h1><span lang=EN>Treoubleshooting:</span></h1>
+
+</div>
 
 <p class=MsoNormal style='margin-left:.5in;line-height:normal'><b><span
 lang=EN style='font-family:"Verdana",sans-serif'>Region Error:</span></b><span
@@ -200,16 +294,16 @@ Region 1017, 1008&nbsp;&nbsp;&nbsp;&nbsp;
 1b47af46-9364-4cde-909c-a3173d98291f&nbsp; 1017,1008&nbsp;&nbsp;&nbsp;
 256x256&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; RegionOnline<br>
 Region 1015, 1007&nbsp;&nbsp;&nbsp;&nbsp;
-2302b841-11d3-4c2c-9ebb-0fce4c26beea&nbsp; 1015,1007&nbsp;&nbsp;&nbsp;
+2302b841-11d3-4c2c-9ebb-0fce4c26beea&nbsp; 1015,1007&nbsp;&nbsp;&nbsp; 256x256&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+RegionOnline<br>
+Region 1013, 1009&nbsp;&nbsp;&nbsp;&nbsp;
+4e69b298-c084-466f-b450-f34fbffa2238&nbsp; 1013,1009&nbsp;&nbsp;&nbsp;
 256x256&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; RegionOnline<br>
-Region 1013, 1009&nbsp;&nbsp;&nbsp;&nbsp; 4e69b298-c084-466f-b450-f34fbffa2238&nbsp;
-1013,1009&nbsp;&nbsp;&nbsp; 256x256&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; RegionOnline<br>
 Region 1015, 1009&nbsp;&nbsp;&nbsp;&nbsp;
 74f9d745-fa42-450b-96e5-0770eae37928&nbsp; 1015,1009&nbsp;&nbsp;&nbsp;
 256x256&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; RegionOnline<br>
-<b>Region 1016, 1009&nbsp;&nbsp;&nbsp;&nbsp;
-a357ccd6-43d6-45ff-8563-35f09345908e&nbsp; 1016,1009&nbsp;&nbsp;&nbsp;
-256x256&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; RegionOnline<br>
+<b>Region 1016, 1009&nbsp;&nbsp;&nbsp;&nbsp; a357ccd6-43d6-45ff-8563-35f09345908e&nbsp;
+1016,1009&nbsp;&nbsp;&nbsp; 256x256&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; RegionOnline<br>
 </b>Region 1017, 1007&nbsp;&nbsp;&nbsp;&nbsp;
 c8775e97-ae1d-4164-8db8-ec205e46a148&nbsp; 1017,1007&nbsp;&nbsp;&nbsp;
 256x256&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; RegionOnline<br>
