--- a/OutworldzFiles/Help/SmartStart.htm
+++ b/OutworldzFiles/Help/SmartStart.htm
@@ -70,9 +70,10 @@ div.WordSection1
 
 <div class=WordSection1>
 
-<p class=MsoNormal align=center style='margin:0in;text-align:center'><span
-style='font-size:26.0pt;line-height:115%;font-family:"Calibri Light",sans-serif;
-color:#5B9BD5;text-transform:uppercase;letter-spacing:.5pt'>Smart Start</span></p>
+<p class=MsoNormal align=center style='margin:0in;text-align:center'><a
+name="OLE_LINK31"><span style='font-size:26.0pt;line-height:115%;font-family:
+"Calibri Light",sans-serif;color:#5B9BD5;text-transform:uppercase;letter-spacing:
+.5pt'>Smart Start</span></a></p>
 
 <p class=MsoNormal>&nbsp;</p>
 
@@ -80,20 +81,28 @@ color:#5B9BD5;text-transform:uppercase;letter-spacing:.5pt'>Smart Start</span></
 them.&nbsp;&nbsp; A Smart Start region appears as a dual blue arrow ’recycle’
 icon in the Regions panel:</p>
 
-<p class=MsoNormal><img width=698 height=388 id="Picture 4"
-src="SmartStart_files/image001.png"
+<p class=MsoNormal><img width=618 height=343 id="Picture 4"
+src="SmartStart_files/image001.jpg"
 alt="Graphical user interface, application, table&#10;&#10;Description automatically generated"></p>
 
 <p class=MsoNormal>Smart start detects teleports.&nbsp; When someone teleports
 into the system, or logs in, the system decides if their destination is already
-bootet.&nbsp; If so, the teleport happens normally. But If the region is not ready,
-the system sends the avatar to a waiting area while the region is booted. When
-the original destination region is ready for logins, the avatar is teleported
-to the original destination.</p>
+bootet.&nbsp; If so, the teleport happens normally. But If the region is not
+ready, the system sends the avatar to a waiting area while the region is
+booted. When the original destination region is ready for logins, the avatar is
+teleported to the original destination.</p>
+
+<span style='font-size:10.0pt;line-height:115%;font-family:"Calibri",sans-serif'><br
+clear=all style='page-break-before:always'>
+</span>
+
+<p class=MsoNormal>&nbsp;</p>
+
+<p class=MsoNormal>&nbsp;</p>
 
 <div style='border:solid #4472C4 3.0pt;padding:0in 0in 0in 0in;background:#4472C4'>
 
-<h1 style='background:#4472C4'>Enable Smart Start</h1>
+<h1>Enable Smart Start</h1>
 
 </div>
 
@@ -109,11 +118,23 @@ alt="Graphical user interface, text, application&#10;&#10;Description automatica
 <p class=MsoNormal>The system can be set to power down the region when no one
 is in it. This length of time is from 15 seconds upward.</p>
 
-<p class=MsoNormal>Choose a Parking Region</p>
+<span style='font-size:10.0pt;line-height:115%;font-family:"Calibri",sans-serif'><br
+clear=all style='page-break-before:always'>
+</span>
+
+<p class=MsoNormal>&nbsp;</p>
+
+<p class=MsoNormal>&nbsp;</p>
+
+<div style='border:solid #4472C4 3.0pt;padding:0in 0in 0in 0in;background:#4472C4'>
+
+<h1>Choose a Parking Region</h1>
+
+</div>
 
 <p class=MsoNormal>If a region is offline and a teleport is initiated, the
 region will be booted. This may take more time than the viewer allows.  The
-avatar is teleported to a waiting region, aka, a “Parking Region”. You  can
+avatar is teleported to a waiting region, aka, a “Parking Region”. You  can
 choose any region, such as your Welcome region, which is the Default.</p>
 
 <p class=MsoNormal><img width=234 height=330 id="Picture 8"
@@ -124,20 +145,20 @@ alt="A picture containing graphical user interface&#10;&#10;Description automati
 
 <div style='border:solid #4472C4 3.0pt;padding:0in 0in 0in 0in;background:#4472C4'>
 
-<h1 style='background:#4472C4'>Region Setup</h1>
+<h1>Region Setup</h1>
 
 </div>
 
 <p class=MsoNormal>&nbsp;</p>
 
-<p class=MsoNormal>You must enable Smart Start in the regions you want to remain
-powered down when no one needs them.  </p>
+<p class=MsoNormal>You must enable Smart Start in the regions you want to
+remain powered down when no one needs them.  </p>
 
 <p class=MsoNormal>This can be enabled or disabled for any region.&nbsp; Edit
 any region and set the Smart Start Checkbox to True. This goes into effect
 immediately.</p>
 
-<p class=MsoNormal>If the region is running and no avatar &nbsp;in it, it will
+<p class=MsoNormal>If the region is running and no avatar&nbsp;in it, it will
 shut down within the time period you set.</p>
 
 <p class=MsoNormal><span style='position:absolute;z-index:251661312;margin-left:
@@ -150,7 +171,7 @@ alt="Graphical user interface, application&#10;&#10;Description automatically ge
 
 <div style='border:solid #4472C4 3.0pt;padding:0in 0in 0in 0in;background:#4472C4'>
 
-<h1 style='background:#4472C4'>Automatic Fill</h1>
+<h1>Automatic Fill</h1>
 
 </div>
 
@@ -160,11 +181,11 @@ alt="Graphical user interface, application&#10;&#10;Description automatically ge
 enabled, anyone moving into a region will trigger an automatic fill of
 surrounding regions with the Landscaping and Trees/Plants modules.</p>
 
-<p class=MsoNormal>In those screens you can choose water regions, as just one
-example.   If set to water, your avatar can walk, fly, or boat across  the
-entire expanse of your grid. Its literally an Endless sea.</p>
+<p class=MsoNormal>In those screens you can choose water regions, as just one example.  
+If set to water, your avatar can walk, fly, or boat across the entire expanse
+of your grid. Its literally an “Endless Sea”.</p>
 
-<p class=MsoNormal>You should select an avatar that will own  the Estate  named
+<p class=MsoNormal>You should select an avatar that will own the Estate named
 “SimSurround”, which is the owner of these Regions.</p>
 
 <p class=MsoNormal><img width=225 height=324 id="Picture 9"
